--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -9,13 +9,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- icon(FA) -->
   <link href="style.css" rel="stylesheet"> <!-- custom css -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> <!-- bootstrap -->
-  <!-- Adding script -->
+  <!-- JQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  
+  <!-- Adding scripts -->
+  <script src="search.js" async></script>
+  <script src="dropdown.js" async></script>
   <script src="shopping_cart.js" async></script>
 </head>
 <body class="container fluid bg_image">
   <div class="bg-light">
 
-  <!-- Navigation panel -->
+    <!-- Navigation panel -->
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container-fluid">
       <ul class="navbar-nav">
@@ -23,7 +28,7 @@
           <a class="nav-link navbar-brand font-weight-bold" href="#">ConWeb</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="index.html">Main page</a>
+          <a class="nav-link disabled" href="index.html">Main page</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="catalogue.html">Catalogue</a>
@@ -42,10 +47,15 @@
         </li>
             <!-- Search form+button -->
         <li class="nav-item ms-auto">
-          <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon"/>
+          <input type="search" id="searchbar" onclick="myFunction()" onkeyup="search_animal()" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon"/>
+          <div id="myDropdown" class="dropdown-content list">
+            <a class="animals" href="colors.html">Paints</a>
+            <a class="animals" href="wood.html">Wood</a>
+            <a class="animals" href="cement.html">Cement</a>
+          </div>
         </li>
         <li class="nav-item ms-auto">
-          <button type="button" class="btn btn-outline-primary">search</button>
+          <button type="button" id="searchbar_btn" class="btn btn-outline-primary">search</button>
         </li>
       </ul>
     </div>
@@ -80,18 +90,18 @@
                     </div>
                     <span class="cart-price cart-column">$9.99</span>
                     <div class="cart-quantity cart-column">
-                        <input class="cart-quantity-input" type="number" value="2">
+                        <input class="cart-quantity-input" type="number" value="1">
                         <button class="btn btn-danger" type="button">REMOVE</button>
                     </div>
                 </div>
 
                 <div class="cart-row">
                     <div class="cart-item cart-column">
-                        <span class="cart-item-title">Album 3</span>
+                        <span class="cart-item-title">Cement</span>
                     </div>
                     <span class="cart-price cart-column">$9.99</span>
                     <div class="cart-quantity cart-column">
-                        <input class="cart-quantity-input" type="number" value="2">
+                        <input class="cart-quantity-input" type="number" value="1">
                         <button class="btn btn-danger" type="button">REMOVE</button>
                     </div>
                 </div>
